--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ obj/
 /packages/
 riderModule.iml
 /_ReSharper.Caches/
+/SleeperDashboard/.vs/SleeperDashboard/FileContentIndex/7f516dec-1df0-4520-ba21-aded555b35b9.vsidx
+/SleeperDashboard/.vs/SleeperDashboard/v17/.wsuo
+/SleeperDashboard/.vs/SleeperDashboard/v17/DocumentLayout.json
+/SleeperDashboard/.vs/slnx.sqlite
+/SleeperDashboard/.vs/VSWorkspaceState.json
+/.idea/.idea.SleeperDashboard/.idea
+/.vs/SleeperDashboard/config
+/.vs/SleeperDashboard
