--- a/SleeperDashboard/appsettings.json
+++ b/SleeperDashboard/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SleeperMySQL": "Server=mysql-container;Database=SleeperDb;port=3306;user=root;password=L0caldev"
+  }
 }
