--- a/SleeperDashboard/appsettings.json
+++ b/SleeperDashboard/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SleeperMySQL": "Server=mysql-container;Database=SleeperDb;port=3306;user=root;password=L0caldev"
+    "SleeperMySQL": "Server=mysql;Database=SleeperDb;User=root;Password=L0caldev;Port=3306;"
   }
 }
+
